# papers_translater

./: .env.example  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  README.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/routes/: health.py  jobs.py
backend/app/clients/: ocr_client.py  ollama_client.py
backend/app/core/: config.py  logging.py
backend/app/models/: schemas.py
backend/app/pipeline/: ocr_page.py  order_blocks.py  render_pdf.py  run_job.py  to_markdown.py  translate.py
backend/app/store/: paths.py  state.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: Dropzone.tsx  MarkdownViewer.tsx  Progress.tsx
frontend/src/pages/: JobPage.tsx  UploadPage.tsx
