[project]
name = "pdf-translate-local-backend"
version = "0.1.0"
description = "Local scan PDF translation backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pillow>=10.4.0,<12.0.0",
  "pymupdf>=1.24.0,<2.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[tool.uv]
dev-dependencies = []
